# 8bitbench

./: .gitignore  LICENCE.md  README.md  cli.mjs  coi-serviceworker.js  index.html  js3harness.js
assets/cc65/src/ca65/: instr.c
assets/nesdoug/: dbg.txt  full_game.nes  full_game.s  makefile
assets/tutorial/: crt0.s  dbg.txt  labels.txt  makefile
js/: bench.js  index.js  web-index.js  web-worker.js  worker.js
rust/: Cargo.toml
rust/pkg/: emu_bench.d.ts  emu_bench.js  emu_bench_bg.wasm  emu_bench_bg.wasm.d.ts  package.json
rust/src/: benchmark.rs  binloader.rs  console.rs  controller.rs  cpu.rs  ines.rs  lib.rs  main.rs  mapper_0.rs  memory.rs  nes.rs  ppu.rs
